--- a/cart.html
+++ b/cart.html
@@ -48,6 +48,11 @@
     // Show cart on page load
     displayCart();
   </script>
+  
+  <script src="script.js"></script>
+<script>
+  displayCart();
+</script>
 
 </body>
 </html>
