--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <header>
-    <h1>🍬 Slappin Candy 🍬</h1>
-    <p class="tagline">Candy that hits different.</p>
-    <a href="shop.html" class="btn">Shop Now</a>
-  </header>
+  <header class="site-header">
+  <a href="index.html" class="logo-link">
+    <img src="images/slappin-candy-logo.png" alt="Slappin Candy Logo" class="logo">
+  </a>
+</header>
 
   <section class="info">
     <h2>Nationwide Shipping • Local Pickup Available</h2>
