--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="site-header">
+<header class="site-header">
   <a href="index.html" class="logo-link">
-    <img src="images/slappin-candy-logo.png" alt="Slappin Candy Logo" class="logo">
+    <img
+      src="images/slappin-candy-logo.png"
+      alt="Slappin Candy Logo"
+      class="logo"
+    >
   </a>
+
+  <nav class="nav">
+    <a href="shop.html">Shop</a>
+    <a href="cart.html">Cart</a>
+  </nav>
 </header>
 
   <section class="info">
