--- a/shop.html
+++ b/shop.html
@@ -7,10 +7,20 @@
 </head>
 <body>
 
-  <header>
-    <h1>🍬 Shop Slappin Candy 🍬</h1>
-    <a href="index.html" class="btn">Back Home</a>
-  </header>
+<header class="site-header">
+  <a href="index.html" class="logo-link">
+    <img
+      src="images/slappin-candy-logo.png"
+      alt="Slappin Candy Logo"
+      class="logo"
+    >
+  </a>
+
+  <nav class="nav">
+    <a href="shop.html">Shop</a>
+    <a href="cart.html">Cart</a>
+  </nav>
+</header>
 
   <section class="products">
 
