--- a/cart.html
+++ b/cart.html
@@ -7,10 +7,20 @@
 </head>
 <body>
 
-  <header>
-    <h1>🛒 Your Cart</h1>
-    <a href="shop.html" class="btn">Continue Shopping</a>
-  </header>
+<header class="site-header">
+  <a href="index.html" class="logo-link">
+    <img
+      src="images/slappin-candy-logo.png"
+      alt="Slappin Candy Logo"
+      class="logo"
+    >
+  </a>
+
+  <nav class="nav">
+    <a href="shop.html">Shop</a>
+    <a href="cart.html">Cart</a>
+  </nav>
+</header>
 
   <section class="cart-items" id="cart-items">
     <!-- Cart items will be injected here -->
